# Energy-Charts

./: .gitignore  LICENSE  README.md  api_accessor.py  functions.py  main.py  pyproject.toml  requirements.txt  ruff.toml
app/: api.py  enums.py  parser.py
examples/: basic_get_installed_power.py  basic_get_power_production.py  basic_get_public_power.py  energy_mix_trend_all_countries.py  how_to_get_data.py  power_production_trend_all_countries.py
logo/: logo.ai
src/: api_accessor.py  api_response_processor.py  globals.py
